--- a/Styles/paginainicio.css
+++ b/Styles/paginainicio.css
@@ -1,5 +1,5 @@
 :root {
-    --bg: linear-gradient(100deg, #ffffff, #000000);
+    --bg: linear-gradient(100deg, #7c7c7c);
     --bg-secondary: #ffffff;
     --surface: #ffffff;
     --surface-alt: #f8fafc;
